--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-flv",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -18,7 +18,8 @@
   "scripts": {
     "lint": "prettier --list-different \"**/*.{ts,js,json,css,md}\"",
     "lint:fix": "prettier --write \"**/*.{ts,js,json,css,md}\"",
-    "build": "tsc"
+    "build": "tsc",
+    "release": "yarn build && yarn publish"
   },
   "dependencies": {
     "bitwise": "^0.2.0",
