--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,10 @@
   "compilerOptions": {
     "target": "es2019",
     "module": "commonjs",
-    "outDir": "./dist",
+    "declaration": true,
     "sourceMap": true,
     "incremental": true,
-    "declaration": true
+    "outDir": "./dist"
   },
   "include": ["./src/**/*"]
 }
